package trackingSimulator.ShippingUpdates

class CanceledUpdate(updateString: String) : ShippingUpdate(updateString) {
}