package trackingSimulator.ShippingUpdates

class CreatedUpdate(updateString: String) : ShippingUpdate(updateString) {
    fun getId() {
        // TODO
    }
}