package trackingSimulator.ShippingUpdates

class DelayedUpdate(updateString: String) : ShippingUpdate(updateString) {
}