package trackingSimulator.ShippingUpdates

class DeliveredUpdate(updateString: String) : ShippingUpdate(updateString) {
}