package trackingSimulator.ShippingUpdates

class LocationUpdate(updateString: String) : ShippingUpdate(updateString) {
}