package trackingSimulator.ShippingUpdates

class LostUpdate(updateString: String) : ShippingUpdate(updateString) {
}