package trackingSimulator.ShippingUpdates

class NoteAddedUpdate(updateString: String) : ShippingUpdate(updateString) {
}