package trackingSimulator.ShippingUpdates

class ShippedUpdate(updateString: String) : ShippingUpdate(updateString) {
}